<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:title="@string/preference_mode_catagory">
        
        <ListPreference
            android:title="@string/mode_preference_title"
            android:key="@string/pref_mode_key"
            android:defaultValue="BOUNCE_MODE"
            android:entries="@array/pref_mode_entries"
            android:entryValues="@array/pref_mode_values"/>
 	</PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/preference_bounce_catagory">
        
        <EditTextPreference
          	android:title="@string/bounce_ball_num_title"
          	android:key="@string/pref_ball_num_key"
          	android:inputType="number"
          	android:defaultValue="15"/> 
          	
        <EditTextPreference
            android:title="@string/ball_size_min_title"
            android:key="@string/pref_bounce_ball_min_size_key"
            android:inputType="number"
            android:defaultValue="5"/>
        
        <EditTextPreference 
            android:title="@string/bounce_size_range_title"
            android:key="@string/pref_bounce_size_range_key"
            android:inputType="number"
            android:defaultValue="10"/>
        <EditTextPreference 
            android:title="@string/bounce_speed_min_title"
            android:key="@string/pref_bounce_speed_min_key"
            android:inputType="number"
            android:defaultValue="5"/>
        
        <EditTextPreference 
            android:title="@string/bounce_speed_range_title"
            android:key="@string/pref_bounce_speed_range_key"
            android:inputType="number"
            android:defaultValue="1"/>
        
        <ListPreference
            android:title="@string/ball_bounce_color_title"
            android:key="@string/pref_bounce_ball_color_key"
            android:defaultValue="random"
            android:entries="@array/pref_bounce_color_entries"
            android:entryValues="@array/pref_bounce_color_values"/>
        
        <ListPreference
            android:title="@string/background_bounce_color_title"
            android:key="@string/pref_bounce_background_color_key"
            android:defaultValue="random"
            android:entries="@array/pref_bounce_color_entries"
            android:entryValues="@array/pref_bounce_color_values"/>
            
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/preference_tilt_catagory">
        
        <CheckBoxPreference 
            android:title="@string/tilt_enforce_friction_title"
            android:key="@string/pref_tilt_friction_key"/>
        
        <EditTextPreference 
            android:title="@string/tilt_friction_strength_title"
            android:key="@string/pref_tilt_friction_strength_key"
            android:dependency="@string/pref_tilt_friction_key"
            android:inputType="number"
            android:defaultValue="10"/>
        
        <EditTextPreference 
            android:title="@string/tilt_ball_size_title"
            android:key="@string/pref_tilt_ball_size_key"
            android:inputType="number"
            android:defaultValue="15"/>
        
        <ListPreference
            android:title="@string/ball_bounce_color_title"
            android:key="@string/pref_tilt_ball_color_key"
            android:defaultValue="random"
            android:entries="@array/pref_bounce_color_entries"
            android:entryValues="@array/pref_bounce_color_values"/>
        
        <ListPreference
            android:title="@string/background_bounce_color_title"
            android:key="@string/pref_tilt_background_color_key"
            android:defaultValue="random"
            android:entries="@array/pref_bounce_color_entries"
            android:entryValues="@array/pref_bounce_color_values"/>
        
    </PreferenceCategory>
    
    
</PreferenceScreen> 